# Concept

./: .gitignore  CMakeLists.txt
modules/: FindSDL2_image.cmake  Utils.cmake
scripts/: installDeps.sh
src/: main.cpp
src/Engine/: Engine.cpp  Engine.hpp
src/Engine/Memory/: LinearAllocator.cpp  LinearAllocator.hpp  MemoryManager.cpp  MemoryManager.hpp
src/Engine/Systems/: Component.hpp  Entity.cpp  Entity.hpp  EntitySystem.cpp  EntitySystem.hpp  RenderComponent.hpp  RenderingSystem.hpp  TextureComponent.hpp  TextureSystem.cpp  TextureSystem.hpp  TransformComponent.cpp  TransformComponent.hpp  TransformSystem.cpp  TransformSystem.hpp
src/Engine/Utils/: Constants.hpp
